--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "mrpachara/erp-core-bundle",
-    "description": "ERP Core Bundle",
-    "keywords": ["annotations","aop"],
+    "name": "mrpachara/erp-system-bundle",
+    "description": "ERP System Bundle",
+    "keywords": ["Erp","System"],
     "type": "symfony-bundle",
     "license": "Apache-2.0",
     "authors": [
@@ -11,13 +11,28 @@
         }
     ],
     "require": {
-        "php": ">=5.3.9",
-        "symfony/symfony": "3.1.*"
+      "php": "^7.0",
+      "symfony/symfony": "^3.2.0",
+      "doctrine/orm": "dev-master",
+      "doctrine/doctrine-bundle": "dev-master",
+      "doctrine/doctrine-cache-bundle": "dev-master",
+      "symfony/polyfill-apcu": "^1.0",
+      "sensio/distribution-bundle": "^5.0",
+      "sensio/framework-extra-bundle": "^3.0.2",
+      "incenteev/composer-parameter-handler": "^2.0",
+      "jms/di-extra-bundle": "dev-master",
+      "jms/security-extra-bundle": "dev-master",
+      "jms/serializer-bundle": "dev-master",
+      "friendsofsymfony/rest-bundle": "dev-master",
+      "symfony/psr-http-message-bridge": "^1.0",
+      "zendframework/zend-diactoros": "^1.3",
+      "mrpachara/erp-core-bundle": "1.0.0"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^2.7"
+      "sensio/generator-bundle": "^3.0",
+      "symfony/phpunit-bridge": "^3.0"
     },
     "autoload": {
-        "psr-4": { "Erp\\Bundle\\CoreBundle\\": "" }
+        "psr-4": { "Erp\\Bundle\\SystemBundle\\": "" }
     }
 }
