--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -2,18 +2,44 @@ services:
 #    erp_system.example:
 #        class: Erp\Bundle\SystemBundle\Example
 #        arguments: ["@service_id", "plain_value", %parameter%]
-    erp_system.service.system_account:
-        class: Erp\Bundle\SystemBundle\Service\Impl\SystemAccountService
-        arguments: ["@=service('doctrine').getRepository('ErpSystemBundle:SystemAccount')"]
 
-    erp_system.service.system_user:
-        class: Erp\Bundle\SystemBundle\Service\Impl\SystemUserService
-        arguments: ["@=service('doctrine').getRepository('ErpSystemBundle:SystemUser')"]
+  #CQRS
+  erp_system.cqrs.system_account:
+    class: Erp\Bundle\CoreBundle\Domain\CQRS\CQRSContainer
+    arguments:
+      - "@=service('doctrine').getRepository('ErpSystemBundle:SystemAccount')"
+      - "@=service('doctrine').getRepository('ErpSystemBundle:SystemAccount')"
 
-    erp_system.service.system_client:
-        class: Erp\Bundle\SystemBundle\Service\Impl\SystemClientService
-        arguments: ["@=service('doctrine').getRepository('ErpSystemBundle:SystemClient')"]
+  erp_system.cqrs.system_client:
+    class: Erp\Bundle\CoreBundle\Domain\CQRS\CQRSContainer
+    arguments:
+      - "@=service('doctrine').getRepository('ErpSystemBundle:SystemClient')"
+      - "@=service('doctrine').getRepository('ErpSystemBundle:SystemClient')"
 
-    erp_system.service.system_group:
-        class: Erp\Bundle\SystemBundle\Service\Impl\SystemGroupService
-        arguments: ["@=service('doctrine').getRepository('ErpSystemBundle:SystemGroup')"]
+  erp_system.cqrs.system_group:
+    class: Erp\Bundle\CoreBundle\Domain\CQRS\CQRSContainer
+    arguments:
+      - "@=service('doctrine').getRepository('ErpSystemBundle:SystemGroup')"
+      - "@=service('doctrine').getRepository('ErpSystemBundle:SystemGroup')"
+
+  erp_system.cqrs.system_user:
+    class: Erp\Bundle\CoreBundle\Domain\CQRS\CQRSContainer
+    arguments:
+      - "@=service('doctrine').getRepository('ErpSystemBundle:SystemUser')"
+      - "@=service('doctrine').getRepository('ErpSystemBundle:SystemUser')"
+
+#    erp_system.service.system_account:
+#        class: Erp\Bundle\SystemBundle\Service\Impl\SystemAccountService
+#        arguments: ["@=service('doctrine').getRepository('ErpSystemBundle:SystemAccount')"]
+#
+#    erp_system.service.system_user:
+#        class: Erp\Bundle\SystemBundle\Service\Impl\SystemUserService
+#        arguments: ["@=service('doctrine').getRepository('ErpSystemBundle:SystemUser')"]
+#
+#    erp_system.service.system_client:
+#        class: Erp\Bundle\SystemBundle\Service\Impl\SystemClientService
+#        arguments: ["@=service('doctrine').getRepository('ErpSystemBundle:SystemClient')"]
+#
+#    erp_system.service.system_group:
+#        class: Erp\Bundle\SystemBundle\Service\Impl\SystemGroupService
+#        arguments: ["@=service('doctrine').getRepository('ErpSystemBundle:SystemGroup')"]
