--- a/Resources/config/serializer/Entity.SystemGroup.yml
+++ b/Resources/config/serializer/Entity.SystemGroup.yml
@@ -2,4 +2,4 @@ Erp\Bundle\SystemBundle\Entity\SystemGroup:
   access_type: property
   properties:
     accounts:
-      type: Erp\Bundle\CoreBundle\Collection\ArrayCollection<Erp\Bundle\SystemBundle\Entity\SystemAccount>
+      exclude: true
