--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -22,6 +22,10 @@ services:
     resource: '../../Controller'
     tags: ['controller.service_arguments']
   
+  Erp\Bundle\SystemBundle\Security\Encoder\SystemSpecificPasswordEncoder:
+    arguments:
+      - "%system_password%"
+    
   #--------- global --------------
   # erp_system.service.user_provider:
   #   class: Erp\Bundle\SystemBundle\Service\UserProvider
