I don't known just push.

--- a/Resources/config/serializer/Entity.SystemAccount.yml
+++ b/Resources/config/serializer/Entity.SystemAccount.yml
@@ -10,3 +10,4 @@ Erp\Bundle\SystemBundle\Entity\SystemAccount:
     getRealRoles:
       serialized_name: roles
       type: array<string>
+      max_depth: 1
